# lossmodels

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: deductible_example.py  fit_and_compare_models.py  fit_and_simulate.py  layer_example.py  limit_example.py  panjer_vs_fft_vs_simulation.py  panjer_vs_simulation.py  stop_loss_example.py  uncertainty_and_limits.py
src/lossmodels/: __init__.py
src/lossmodels/aggregate/: __init__.py  base.py  collective.py  discretization.py  fft.py  panjer.py  risk_measures.py  risk_measures_pmf.py
src/lossmodels/coverage/: __init__.py  deductible.py  layer.py  limit.py
src/lossmodels/empirical/: __init__.py  distribution.py
src/lossmodels/estimation/: __init__.py  censoring.py  diagnostics.py  frequency_selection.py  mle.py  model_selection.py  moments.py  uncertainty.py
src/lossmodels/frequency/: __init__.py  base.py  binomial.py  geometric.py  modified.py  negbinomial.py  poisson.py  truncated.py
src/lossmodels/integrations/: actuarialpy.py
src/lossmodels/severity/: __init__.py  base.py  exponential.py  finite_support.py  gamma.py  lognormal.py  other_severity.py  pareto.py  spliced.py  tables.py  transformed_beta.py  transformed_gamma.py  weibull.py
tests/: test_aggregate_pmf.py  test_aggregate_vectorization.py  test_censoring_km.py  test_compound_and_empirical.py  test_coverage_transforms.py  test_frequency_ab0.py  test_integrations_actuarialpy.py  test_limits_tables.py  test_rng_reproducibility.py  test_scipy_conformance.py  test_severity_identities.py  test_uncertainty_and_comparison.py  test_worked_example_coverage.py
tests/aggregate/: test_base_risk_methods.py  test_collective.py  test_discretization.py  test_discretization_conventions.py  test_fft.py  test_risk_measure_conformance.py  test_risk_measures.py  test_risk_measures_pmf.py
tests/coverage/: test_variance_deterministic.py
tests/empirical/: test_distribution.py
tests/estimation/: test_censoring.py  test_diagnostics.py  test_goodness_of_fit.py  test_mle.py  test_moments.py  test_negbinomial_parameterization.py
tests/severity/: test_fam_severities.py  test_quantile.py  test_spliced.py
(+2 files in other folders)
