[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lossmodels"
version = "0.8.0"
description = "Loss-distribution modeling: severity and frequency fitting, including under deductibles and limits, and aggregate loss distributions via Panjer recursion, FFT, and simulation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Bryant" }]
keywords = [
    "actuarial",
    "insurance",
    "risk",
    "statistics",
    "simulation",
    "loss modeling",
    "frequency severity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "pandas>=1.4",
]

[project.optional-dependencies]
actuarialpy = ["actuarialpy>=0.46"]
dev = [
    "actuarialpy>=0.46","pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/OpenActuarial/lossmodels"
Documentation = "https://openactuarial.org/lossmodels.html"
Repository = "https://github.com/OpenActuarial/lossmodels"
Issues = "https://github.com/OpenActuarial/lossmodels/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lossmodels"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/lossmodels/__init__.py" = ["E402"]
